plang/testing/logs/false-incorrect/84/program84.p.p.out
Error at qn BCH5 Wts8 :- (hA J9, (dOuNW), (yQ Fu); l (nWPb r ucUWf s7xV1 q) (TrC66) WZ ME3Xy).:12:15 error: 
qn BCH5 Wts8 :- (hA J9, (dOuNW), (yQ Fu); l (nWPb r ucUWf s7xV1 q) (TrC66) WZ ME3Xy).
              ^
Error at qn BCH5 Wts8 :- (hA J9, (dOuNW), (yQ Fu); l (nWPb r ucUWf s7xV1 q) (TrC66) WZ ME3Xy).:12:22 error: 
qn BCH5 Wts8 :- (hA J9, (dOuNW), (yQ Fu); l (nWPb r ucUWf s7xV1 q) (TrC66) WZ ME3Xy).
                     ^
Error at qn BCH5 Wts8 :- (hA J9, (dOuNW), (yQ Fu); l (nWPb r ucUWf s7xV1 q) (TrC66) WZ ME3Xy).:12:30 error: 
qn BCH5 Wts8 :- (hA J9, (dOuNW), (yQ Fu); l (nWPb r ucUWf s7xV1 q) (TrC66) WZ ME3Xy).
                             ^
Error at qn BCH5 Wts8 :- (hA J9, (dOuNW), (yQ Fu); l (nWPb r ucUWf s7xV1 q) (TrC66) WZ ME3Xy).:12:39 error: 
qn BCH5 Wts8 :- (hA J9, (dOuNW), (yQ Fu); l (nWPb r ucUWf s7xV1 q) (TrC66) WZ ME3Xy).
                                      ^
Error at qn BCH5 Wts8 :- (hA J9, (dOuNW), (yQ Fu); l (nWPb r ucUWf s7xV1 q) (TrC66) WZ ME3Xy).:12:83 error: 
qn BCH5 Wts8 :- (hA J9, (dOuNW), (yQ Fu); l (nWPb r ucUWf s7xV1 q) (TrC66) WZ ME3Xy).
                                                                                  ^