plang/testing/logs/false-incorrect/84/program84.p.p
d (zk (aBiS) (SFI) JW92X (Edx)) x (TM) :- f (UV) (fCgp (pO (HG) (lHA8X (xBi Ix (H) (T) mGGIy) (HVOT))) E emU) YQ.


n2 (wCuU uNx3 Z87h (V) (dpljp (bUV5u (MvUM)))).

mM (D).
xTZPH X163 :- zXga4 g.

x :- lVhVg (cw3U (gUNtT H (h8C (J) (qvBCl Sw9 (w3T (OOqkt) (ZF5mL)) Z VLRZt) Y (l (ijaT sGKD (Cx) (J))))) (nM (CnOA5)) (q6 zDB)) y, (h h1 U z OoK, aMPO yWuX (STmVs) (T3x3); s5t (Vu4qW); n3Gc), fZK QVY.
p1q5x.

qn BCH5 Wts8 :- (hA J9, (dOuNW), (yQ Fu); l (nWPb r ucUWf s7xV1 q) (TrC66) WZ ME3Xy).

z8 or (Ch) (Cf) m.


qhb b bBaX DNt :- gF04.

ui.
oM K (qm (I) (Xs)) (fh (s (T5j) (J)) F).
nCFUi (QU2SC) ouDuz.
bLCi0.


? yhAc FWkg5 wQ fc7L; ouxw Aan8 (Fy); hnhSX eh (b (cI (QWg9) (nd) (R16) (rMN (XQ))) TfS0S (yX) (g (Fs2ss) (DImEB) f (BmN))).



